troca de titulo

--- a/jogo_da_memoria-master/jogo_da_memoria-master/public/index.html
+++ b/jogo_da_memoria-master/jogo_da_memoria-master/public/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header>
-    <h1>JOGO DA MEMÓRIA RHINO</h1>
+    <h1>JOGO DA MEMÓRIA RINO</h1>
     <nav>
       <!--<a href="/">DECKS</a>
         <a href="/">SOBRE</a>-->
