--- a/jogo_da_memoria-master/jogo_da_memoria-master/public/index.html
+++ b/jogo_da_memoria-master/jogo_da_memoria-master/public/index.html
@@ -94,6 +94,7 @@
       <script src="cron.js"></script>
       <a>
         <div class="collapsible-body">
+          <section  id="nivel">
           <ul>
             <!--<li>
               <div class="input-field col s6">
@@ -117,6 +118,7 @@
 
             <!-- <li><a href="#!">Size</a></li> -->
           </ul>
+        </section>
           <div class="center">
             <button class="waves-effect waves-light btn blue darken-3" onclick="startGame()">JOGAR</button>
           </div>
